--- a/src/main/resources/templates/lista-pacientes.html
+++ b/src/main/resources/templates/lista-pacientes.html
@@ -4,40 +4,42 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Pacientes</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>Lista de Pacientes</h1>
     
-    <table border="1">
+    <table border="1" class="table table-striped">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Dirección</th>
-                <th>Teléfono</th>
-                <th>Correo Electrónico</th>
-                <th>Alergias</th>
-				<th>Tratamientos Previos</th>
-				<th>Historial Médico</th>
-                <th>Acciones</th>
+                <th scope="col">ID</th>
+                <th scope="col">Nombre</thscope="col">
+                <th scope="col">Dirección</th>
+                <th scope="col">Teléfono</th>
+                <th scope="col">Correo Electrónico</th>
+                <th scope="col">Alergias</th>
+				<th scope="col">Tratamientos Previos</th>
+				<th scope="col">Historial Médico</th>
+                <th scope="col">Acciones</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="paciente : ${pacientes}">
-                <td th:text="${paciente.idpaciente}"></td>
-                <td th:text="${paciente.nombre}"></td>
-                <td th:text="${paciente.direccion}"></td>
-                <td th:text="${paciente.telefono}"></td>
-                <td th:text="${paciente.correo}"></td>
-                <td th:text="${paciente.alergias}"></td>
-				<td th:text="${paciente.tratamientosprevios}"></td>
-				<td th:text="${paciente.historialMedico != null ? paciente.historialMedico.idhistorial : 'Sin Historial'}"></td>
+                <td th:text="${paciente.idpaciente}" scope="row"></td>
+                <td th:text="${paciente.nombre}" scope="row"></td>
+                <td th:text="${paciente.direccion}" scope="row"></td>
+                <td th:text="${paciente.telefono}"scope="row"></td>
+                <td th:text="${paciente.correo}" scope="row"></td>
+                <td th:text="${paciente.alergias}"scope="row"></td>
+				<td th:text="${paciente.tratamientosprevios}"scope="row"></td>
+				<td th:text="${paciente.historialMedico != null ? paciente.historialMedico.idhistorial : 'Sin Historial'}"scope="row"></td>
                 <td>
                     <a th:href="@{/historiales/gestionar/{id}(id=${paciente.idpaciente})}">Gestionar Historial</a>
                 </td>
             </tr>
         </tbody>
     </table>
-	<a th:href="@{/registro-paciente}">Registrar nuevo Paciente</a>
+	<a href="@[/reporte]" target="_blank" class="btn btn-primary">Reporte Pdf</a>
+	<a th:href="@{/registro-paciente}"  class="btn btn-warning">Registrar nuevo Paciente</a>
 </body>
 </html>
