--- a/src/main/resources/templates/registro-paciente.html
+++ b/src/main/resources/templates/registro-paciente.html
@@ -4,37 +4,39 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Paciente</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
     <h1>Registrar Nuevo Paciente</h1>
     
-    <form th:action="@{/pacientes/registrar}" th:object="${paciente}" method="post">
-		<label for="nombre">Nombre:</label>
-		<input type="text" id="nombre" name="nombre" th:field="*{nombre}" required><br>
+    <form th:action="@{/pacientes/registrar}" th:object="${paciente}" method="post"style="padding: 10px 50px 20px;">
+		<label for="nombre" class="form-label">Nombre:</label>
+		<input type="text" id="nombre" name="nombre" th:field="*{nombre}"class="form-control" required><br>
 
-		<label for="direccion">Dirección:</label>
-		<input type="text" id="direccion" name="direccion" th:field="*{direccion}" required><br>
+		<label for="direccion" class="form-label">Dirección:</label>
+		<input type="text" id="direccion" name="direccion" th:field="*{direccion}"class="form-control" required><br>
 
-		<label for="telefono">Teléfono:</label>
-		<input type="text" id="telefono" name="telefono" th:field="*{telefono}" required><br>
+		<label for="telefono"class="form-label">Teléfono:</label>
+		<input type="text" id="telefono" name="telefono" th:field="*{telefono}"class="form-control" required><br>
 
-		<label for="correo">Correo Electrónico:</label>
-		<input type="email" id="correo" name="correo" th:field="*{correo}" required><br>
+		<label for="correo"class="form-label">Correo Electrónico:</label>
+		<input type="email" id="correo" name="correo" th:field="*{correo}"class="form-control" required><br>
 
-		<label for="alergias">Alergias:</label>
-		<input type="text" id="alergias" name="alergias" th:field="*{alergias}"><br>
+		<label for="alergias"class="form-label">Alergias:</label>
+		<input type="text" id="alergias" name="alergias" th:field="*{alergias}" class="form-control"><br>
 
-		<label for="tratamientosPrevios">Tratamientos Previos:</label>
-		<textarea id="tratamientosprevios" name="tratamientosPrevios" th:field="*{tratamientosprevios}"></textarea><br>
+		<label for="tratamientosPrevios" class="form-label">Tratamientos Previos:</label>
+		<textarea id="tratamientosprevios" name="tratamientosPrevios" th:field="*{tratamientosprevios}" class="form-control"></textarea><br>
 		
 		<label for="historialMedicoId">Id Historial Odontologico:</label>
-		<select id="historialMedicoId" name="historialMedicoId"  required>
+		<select id="historialMedicoId" name="historialMedicoId" class="form-select" required>
 		    <option th:each="historial : ${historialesMedicos}" 
 		            th:value="${historial.idhistorial}" 
 		            th:text="${historial.idhistorial}"></option>
 		</select><br>
 
-        <button type="submit">Registrar Paciente</button>
+        <button type="submit" class="btn btn-success">Registrar Paciente</button>
     </form>
 </body>
 </html>
